erDiagram

    USER {
        UUID userId PK
        String email UK
        String password
        UserRole role
        String username UK
        String firstName
        String lastName
        String avatarPictureUrl
        String bio
        UserVisibilityLevel visibilityLevel
        UserPrivateMessageLevel privateMessageLevel
        DateTime createdAt
        DateTime updatedAt
    }

    RESOURCE {
        UUID resourceId PK
        String name UK
        ResourceCategory category
        ResourceType type
        Float duration
        Int level
        DateTime createdAt
        DateTime updatedAt
    }

    ACTIVITY {
        UUID activityId PK
        String name UK
        String desc
        DateTime createdAt
        DateTime updatedAt
    }

    JOURNAL_ENTRY {
        UUID journalId PK
        UUID userId FK
        Date date
        Int generalMood
        Int energyLevel
        Int sleepQuality
        Int stressLevel
        String keyEvents
        String dailyGratitude
        DateTime createdAt
        DateTime updatedAt
    }

    JOURNAL_ACTIVITY {
        UUID journalId PK, FK
        UUID activityId PK, FK
    }

    GROUP {
        UUID groupId PK
        String name UK
        String theme
        String desc
        String rules
        GroupVisibility visibility
        DateTime createdAt
        DateTime updatedAt
    }

    GROUP_MEMBER {
        UUID userId PK, FK
        UUID groupId PK, FK
        GroupRole role
        GroupRequestStatus requestStatus
        DateTime createdAt
        DateTime updatedAt
    }

    POST {
        UUID postId PK
        UUID userId FK
        UUID groupId FK
        String title
        String body
        DateTime createdAt
        DateTime updatedAt
    }

    COMMENT {
        UUID commentId PK
        UUID userId FK
        UUID postId FK
        String comment
        DateTime createdAt
        DateTime updatedAt
    }

    MESSAGE {
        UUID messageId PK
        UUID senderId FK
        UUID recipientId FK
        String message
        MessageReadReceipt readReceipt
        DateTime createdAt
        DateTime updatedAt
    }

    REPORT {
        UUID reportId PK
        UUID postId FK
        UUID userId FK
        ReportCategory category
        ReportStatus status
        DateTime createdAt
        DateTime updatedAt
    }

    REFRESH_TOKEN {
        UUID refreshTokenId PK
        UUID userId FK
        String tokenHash
        DateTime expiresAt
        DateTime createdAt
        DateTime revokedAt
        DateTime updatedAt
    }

    FAVORITE {
        UUID userId PK, FK
        UUID resourceId PK, FK
        DateTime createdAt
    }

    %% =========================
    %% RELATIONSHIPS
    %% =========================

    USER ||--o{ JOURNAL_ENTRY : creates

    JOURNAL_ENTRY ||--o{ JOURNAL_ACTIVITY : contains
    ACTIVITY ||--o{ JOURNAL_ACTIVITY : used_in

    USER ||--o{ GROUP_MEMBER : joins
    GROUP ||--o{ GROUP_MEMBER : has

    USER ||--o{ POST : creates
    GROUP ||--o{ POST : contains

    POST ||--o{ COMMENT : has
    USER ||--o{ COMMENT : writes

    USER ||--o{ MESSAGE : sends
    USER ||--o{ MESSAGE : receives

    POST ||--o{ REPORT : has
    USER ||--o{ REPORT : submits

    USER ||--o{ REFRESH_TOKEN : owns

    USER ||--o{ FAVORITE : creates
    RESOURCE ||--o{ FAVORITE : contains
